create github pages

--- a/page9.html
+++ b/page9.html
@@ -71,7 +71,7 @@
 
     
     <div class="container">
-        <h2 class="mbr-section-title pb-1 mbr-normal mbr-fonts-style align-left display-2"><br>Properties for Rent</h2>
+        <h2 class="mbr-section-title pb-1 mbr-normal mbr-fonts-style align-left display-1"><strong><br></strong><br><strong>Properties for Rent</strong></h2>
         <div class="row row-content justify-content-center">
             <div class="card p-3 col-12 col-md-6 col-lg-4">
 
@@ -116,9 +116,9 @@ Very versatile layout ,perfect for office or large family
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/02.jpg" title="" alt="">
+                        <img src="assets/images/yonas-17-696x522.jpg" title="" alt="">
                         <div class="card-box">
-                            <h4 class="card-title mbr-fonts-style mbr-white mbr-bold display-7">ETB 30,000 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                            <h4 class="card-title mbr-fonts-style mbr-white mbr-bold display-7">USD 4,000 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                                 &nbsp; &nbsp;
                                 <br>per month</h4>
 
@@ -128,7 +128,7 @@ Very versatile layout ,perfect for office or large family
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">Hi-Tech Apartment&nbsp;</h4>
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">&nbsp;Extraordinary House for rent in Sunshine compound Addis Abeba, Ethiopia EE&nbsp;<br><br></h4>
                         <div class="ico-box">
                             <span class="pr-2 mbr-iconfont mbr-iconfont-social ico2 mbri-pin"></span>
                             <p class="mbr-text mbr-fonts-style phone mbr-normal display-4">Kazanchis, Addis Ababa</p>
@@ -155,9 +155,9 @@ Very versatile layout ,perfect for office or large family
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/03.jpg" title="" alt="">
+                        <img src="assets/images/yonas-23-696x522.jpg" title="" alt="">
                         <div class="card-box">
-                            <h4 class="card-title mbr-fonts-style mbr-white mbr-bold display-7">ETB 40,000 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                            <h4 class="card-title mbr-fonts-style mbr-white mbr-bold display-7">ETB 50,000 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                                 &nbsp; &nbsp;
                                 <br>per month</h4>
 
@@ -167,7 +167,16 @@ Very versatile layout ,perfect for office or large family
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">Creative Apartment&nbsp;</h4>
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">G+2 House for Rent
+<div>Location: Lebu
+</div><div>Area: 500m2
+</div><div>Ground floor:- living and dinning room with open kitchen, 1 room and 1 bathroom.
+</div><div>1st floor:-2 bedrooms with closet and their own bathroom and 2 other bedrooms sharing a common bathroom
+</div><div>2nd floor:-2 bedrooms sharing a common bathroom, a family room and terrace.
+</div><div>Service quarter:-bedroom with shower, kitchen, laundry room, maid's room and shower
+</div><div>It has garden area and parking space for 8+ cars and.
+</div><div>Rate: 50,000 Birr/month (for Residence), 60,000 Birr/month (for Business)&nbsp;
+</div><div>Creative Apartment&nbsp;</div></h4>
                         <div class="ico-box">
                             <span class="pr-2 mbr-iconfont mbr-iconfont-social ico2 mbri-pin"></span>
                             <p class="mbr-text mbr-fonts-style phone mbr-normal display-4">Lebu, Addis Ababa</p>
@@ -484,7 +493,7 @@ Very versatile layout ,perfect for office or large family
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="IjaJDEVdAhcyB9RXqdFFuRP5kC7qu+0f/FfxBT8dLDxyyjf2gA9NUg5VQ3/rJIRbmAPE9EcEOQcCAwpPl0TZ/yLgocstGQLJ6NGVyr3yI6ZBEiTnGFgJBWTXGiVrO0gk">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jAUHYZMxT4isC49cLvv6FfPIjm4K6Ep6Uh7a6Xx1rL4AmmTVdC/371m0pbV5blRBnHSkcUeVZIEEtlNEPxFfm9AhMytFC3mryvFSnJ0Ew31qMpnAj8PUgUrUnfp/y1Kk">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
