create github pages

--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
                                                 <h4 class="card-title1 mbr-fonts-style mbr-normal display-5">House and land for sale</h4>
                                                 <div class="ico-box">
                                                     <span class="pr-2 mbr-iconfont mbr-iconfont-social ico2 mbri-pin"></span>
-                                                    <p class="mbr-text mbr-fonts-style item mbr-normal display-7">Tigray, Shire,&nbsp; Endaslassie<br></p>
+                                                    <p class="mbr-text mbr-fonts-style item mbr-normal display-7">Tigray, Shire,&nbsp; Endaslassie<br>Size:  384.41 sq. meters
+<br>Rooms: -   it has ten old rooms 
+<br>Price: - Negotiable 
+<br>Contact: 0944095339&nbsp;<br></p>
                                                 </div>
                                             </div>
                                         </div>
