create github pages

--- a/page8.html
+++ b/page8.html
@@ -1279,7 +1279,7 @@
 
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/yonas-5-696x522.jpg" title="" alt="">
+                        <a href="#" data-toggle="modal" data-target="#mbr-popup-5u"><img src="assets/images/yonas-5-696x522.jpg" title="" alt=""></a>
                         <div class="card-box">
                             <h4 class="card-title mbr-fonts-style mbr-white mbr-bold display-7">COMING SOON...&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></h4>
 
@@ -1316,7 +1316,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/yonas-8-696x522.jpg" title="" alt="">
+                        <a href="#" data-toggle="modal" data-target="#mbr-popup-5u"><img src="assets/images/yonas-8-696x522.jpg" title="" alt=""></a>
                         <div class="card-box">
                             <h4 class="card-title mbr-fonts-style mbr-white mbr-bold display-7">COMING SOON....&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></h4>
 
@@ -1352,7 +1352,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/yonas-5-696x522.jpg" title="" alt="">
+                        <a href="#" data-toggle="modal" data-target="#mbr-popup-5u"><img src="assets/images/yonas-5-696x522.jpg" title="" alt=""></a>
                         <div class="card-box">
                             <h4 class="card-title mbr-fonts-style mbr-white mbr-bold display-7">COMING SOON....&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></h4>
 
@@ -1415,7 +1415,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zPwoUKfFZFlJhgm0q8wTCdj5CfIzS8mxTS8mlR/9rVCNRq7TmWgcgdvXX8waw8A/C2Y0bUu/5iAA8Nmh+7oVWHKTF4FJn+graCG00wJuNCmOKFUEEPH2Xs2SHUPzHSyC">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="q3ZhPvxaianO/nPmmvWhqcH85emdgu/wXLtj/SnhcaGdb23Ng8TlhzjX96lMFTgnCMnxBGoCzP9+4c6rUPBHtblgpSJcJ22wl8R5PM65c35lFxXuHncZhEsf9RuFNbh6">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
