create github pages

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobiri.se">
+                    <a href="index.html">
                         <img src="assets/images/mbr-138x139.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -656,7 +656,7 @@
 
                 <div class="navbar-brand">
                     <div class="logo">
-                        <a href="https://mobirise.com">
+                        <a href="index.html">
                             <img class="navbar-logo" src="assets/images/mbr-138x139.png" alt="Mobirise">
                         </a>
                     </div>
@@ -704,7 +704,7 @@
                     Contact Us
                 </h3>
 
-                <p class="mbr-text mbr-normal links mbr-fonts-style display-4">Mobile:- 251944095339<br>Email:- leakelibanos@gmail.com<br>Whatsup :- 251944095339<br>Telegram:- 0944095339</p>
+                <p class="mbr-text mbr-normal links mbr-fonts-style display-4">Mobile:- 251944095339<br>Email:- leakelibanos@gmail.com<br>WhatsApp :- 251944095339<br>Telegram:- 0944095339</p>
 
 
                 <div class="social-list align-left">
