--- a/page1.html
+++ b/page1.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobiri.se">
+                    <a href="index.html">
                         <img src="assets/images/mbr-138x139.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -199,7 +199,8 @@
                             <div class="ico-box">
                                 <span class="px-2 mbr-iconfont mbr-iconfont-social mbri-letter"></span>
                                 <p class="mbr-text mbr-fonts-style phone mbr-normal display-4">
-                                    leakelibanos@gmail.com&nbsp; whatup:- 251944095339&nbsp; Telegram:- 251944095339&nbsp;</p>
+                                    WhatsApp:- 251944095339  
+<br>Telegram:- 251944095339&nbsp;<br>leakelibanos@gmail.com&nbsp; <br><br></p>
                             </div>
 
                         </div>
@@ -338,7 +339,7 @@
 
                 <div class="navbar-brand">
                     <div class="logo">
-                        <a href="https://mobirise.com">
+                        <a href="index.html">
                             <img class="navbar-logo" src="assets/images/mbr-138x139.png" alt="Mobirise">
                         </a>
                     </div>
@@ -386,7 +387,7 @@
                     Contact Us
                 </h3>
 
-                <p class="mbr-text mbr-normal links mbr-fonts-style display-4">Mobile:- 251944095339<br>Email:- leakelibanos@gmail.com<br>Whatsup :- 251944095339<br>Telegram:- 0944095339</p>
+                <p class="mbr-text mbr-normal links mbr-fonts-style display-4">Mobile:- 251944095339<br>Email:- leakelibanos@gmail.com<br>WhatsApp :- 251944095339<br>Telegram:- 0944095339</p>
 
 
                 <div class="social-list align-left">
