--- a/page5.html
+++ b/page5.html
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobiri.se">
+                    <a href="index.html">
                         <img src="assets/images/mbr-138x139.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -105,12 +105,12 @@
                         <h5 class="align-left mbr-fonts-style display-7">Please feel free to get in touch to have a chat with us on any of our services or just have coffee. We'll aim to get back to you in 24-48 Hours.</h5>
                         <p class="mbr-text align-left mbr-fonts-style display-7">
                             Phone: +251 944 095339 OR +251 947 057846<br>
-                            Email: leakelibanos@gmail.com <br>Whatsup: 251944095339<br>Telegram :- 0944095339<br>Social Media: Connect with us on&nbsp;LinkedIn&nbsp;or Facebook</p>
+                            Email: leakelibanos@gmail.com <br>WhatsApp: 251944095339<br>Telegram :- 0944095339<br><br></p>
                     </div>
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7jmw0RPF9T8N6kZ0UJTytRX5Oad3Y6s8OlOzf4wG1KjZqYZ5oLwzI3KB2LX5dD0EzGEZ/F7o8007EKNMhk9wyPbrP3ICThqPAiEjc/Ck/NVTwaLhmI0gQXRQiU8ouNdW">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iNWIZnOjW76n1Dj/S34SbLi+ocQhk28FjKSujJfGX+Ybt7JAu1iCnzVaNvtoRgiTxHU9u5VMnA9PHQuJR9B6D7npT/znNiFaNiY1OrRe4N82krzsSKY/L8eIBBHujwLx">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you very much for getting in touch. We'll aim to get back to you in 24-48 Hours.
 
@@ -260,7 +260,7 @@ Speak soon.</div>
 
                 <div class="navbar-brand">
                     <div class="logo">
-                        <a href="https://mobirise.com">
+                        <a href="index.html">
                             <img class="navbar-logo" src="assets/images/mbr-138x139.png" alt="Mobirise">
                         </a>
                     </div>
@@ -308,7 +308,7 @@ Speak soon.</div>
                     Contact Us
                 </h3>
 
-                <p class="mbr-text mbr-normal links mbr-fonts-style display-4">Mobile:- 251944095339<br>Email:- leakelibanos@gmail.com<br>Whatsup :- 251944095339<br>Telegram:- 0944095339</p>
+                <p class="mbr-text mbr-normal links mbr-fonts-style display-4">Mobile:- 251944095339<br>Email:- leakelibanos@gmail.com<br>WhatsApp :- 251944095339<br>Telegram:- 0944095339</p>
 
 
                 <div class="social-list align-left">
