--- a/page8.html
+++ b/page8.html
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobiri.se">
+                    <a href="index.html">
                         <img src="assets/images/mbr-138x139.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -72,7 +72,7 @@
 
     
     <div class="container">
-        <h2 class="mbr-section-title pb-1 mbr-normal mbr-fonts-style align-left display-1"><br><strong>Properties for Sale</strong></h2>
+        <h2 class="mbr-section-title pb-1 mbr-normal mbr-fonts-style align-left display-1"><br><strong><br></strong><strong>Properties for Sale</strong></h2>
         <div class="row row-content justify-content-center">
             <div class="card p-3 col-12 col-md-6 col-lg-4">
 
@@ -91,7 +91,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">ሰፋት 150m2 በይዞታ 220m2 
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">ሰፋት 150m2 በይዞታ 220m2 
 <div><br></div><div>3 መኝታ ቤት ፤2 ሠርቢስ ከሆላ ፤ 3 ባኞ ቤት 
 </div><div>3 መኪና ማቆምያ ፓርክ 
 </div><div>የለማ ሰፈር ፤ ሁሉም ነገር ጥንቅቅ ብሎ ያለቀ አድስ ቤት ፤ መሠረተ ልማተሐ የተሟላ ፡፡</div><br><br><br><br><br><br><div><br></div></h4>
@@ -122,7 +122,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">Villa House for Sale
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">Villa House for Sale
 <div>Location: Summit, Weji Athletoch Mender
 </div><div>Area: 280m2, at L- position&nbsp;
 </div><div>It has living room, master bedroom with attached bathroom, 2 other bedroom sharing a common bathroom. It has service quarter with 3 bedrooms, kitchen and toilet/shower.
@@ -155,7 +155,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">G+2 House for Sale
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">G+2 House for Sale
 <div>Location: Around Yerer Hospital, Yerer Goro to Figa road, 30m from the main road
 </div><div>Area: 175m2
 </div><div>It has living room with open kitchen, master bedroom with attached bathroom/Jacuzzi, 3 bedrooms with their own attached bathroom, 2 bedrooms sharing a common bathroom, room for office, mini-salon, maid's room, main kitchen, 2 toilets and terrace. 
@@ -233,7 +233,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">Villa House for Sale
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">Villa House for Sale
 <div>Location: Summit, Weji Athletoch Mender
 </div><div>Area: 280m2, at L- position 
 </div><div>It has living room, master bedroom with attached bathroom, 2 other bedroom sharing a common bathroom. It has service quarter with 3 bedrooms, kitchen and toilet/shower.
@@ -268,7 +268,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">የሚሸጥ G+2 ቤት&nbsp;
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">የሚሸጥ G+2 ቤት&nbsp;
 <div>ቦታ፡ ሰሚት፥ አትሌቶች መንደር፤ ለአስፋልት መንገድ በጣም ቅርብ
 </div><div>ስፋት፡ 175ሜ.ካሬ
 </div><div>2 ሳሎን ቤቶች (አንዱ ኦፕን ኪችን ያለው)፥ 4 መኝታ ቤቶች (ማስተሩን ጨምሮ ሁሉም የራሳቸው መታጠቢያ ቤት ያላቸው) እና ዋና ኪችን ያለው።
@@ -303,7 +303,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">የሚሸጥ ሰሚት ፍየል ቤት አካባቢ
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">የሚሸጥ ሰሚት ፍየል ቤት አካባቢ
 <div>ቪላ
 </div><div>250ካሬ ሜትር
 </div><div>ዋጋ 9 ሚሊዮን ብር
@@ -349,7 +349,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">የሚሸጡ ቦታዎች ሰሚት ሶስተኛ በር ወርዳ 11
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">የሚሸጡ ቦታዎች ሰሚት ሶስተኛ በር ወርዳ 11
 <div>500ካሬ ሜትር አርባ ሜትር አስፓልት የያዘ 
 </div><div>ዋጋ 7.5 ሚሊየን ብር</div><br><div>
 </div><div>150ካሬ ሜትር ዋጋ 2.7ሚሊየን ብር
@@ -381,7 +381,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">እጂግ ውብ ተደርጎ የተሰራ ቪላ ቤት 
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">እጂግ ውብ ተደርጎ የተሰራ ቪላ ቤት 
 <div>ሰፈር ........ሰሚት 
 </div><div>ካሬ...........250
 </div><div><br></div><div><br></div></h4>
@@ -411,7 +411,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">G+1 House for Sale
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">G+1 House for Sale
 <div>Location: Jackros Homes
 </div><div>Area: 400m2
 </div><div>It has living room, kitchen, room for office and toilet/shower on ground floor.
@@ -494,7 +494,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7"><div>እጅግ በጣም ዘመናዊ ቪላ ቤት ሽያጭ @አአ ወሰን#ሠፈር : ወሰን አካባቢ
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4"><div>እጅግ በጣም ዘመናዊ ቪላ ቤት ሽያጭ @አአ ወሰን#ሠፈር : ወሰን አካባቢ
 </div><div>#ስፋት : 406 ካሜ</div><div>#ሳሎን :1 ከዘመናዊ ክችን ጋር
 </div><div>#መኝታ ቤት :4 እያንዳንዳቸዉ ከዘመናዊ ሻወር ሽንት ቤት እና ቁምሳጥን ጋር&nbsp;
 </div><div>#ሰርቢስ ቤት: ሳሎን፣መኝታ እና የውስጥ ሻውር ሽንት ቤት ያለው::
@@ -533,7 +533,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">የሚሸጥ ቪላ አያት&nbsp;
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">የሚሸጥ ቪላ አያት&nbsp;
 <div>150ካሬ ሜትር በይዞታ 220ካሬ
 </div><div>5.6 ሚሊዮን ብር
 </div><div>code 16<br><div><br></div></div></h4>
@@ -581,7 +581,7 @@
                         <h4 class="card-title2 mbr-fonts-style mbr-normal display-7"><div></div></h4>
                         <div class="ico-box">
                             <span class="pr-2 mbr-iconfont mbr-iconfont-social ico2 mbri-pin"></span>
-                            <p class="mbr-text mbr-fonts-style phone mbr-normal display-5"><br>የሚሸጥ ቦታ ሲምሲ ሚካኤል ጀርባ
+                            <p class="mbr-text mbr-fonts-style phone mbr-normal display-4"><br>የሚሸጥ ቦታ ሲምሲ ሚካኤል ጀርባ
 200ካሬ ሜትር
 <br>አቀማመጥ 10 በ 20 ወደ ጥዋት ፀሀይ የሚያሳይ
 <br>ዋጋ 3.5 ሚሊዮን ብር
@@ -613,7 +613,7 @@
                         <h4 class="card-title2 mbr-fonts-style mbr-normal display-7"><div></div></h4>
                         <div class="ico-box">
                             <span class="pr-2 mbr-iconfont mbr-iconfont-social ico2 mbri-pin"></span>
-                            <p class="mbr-text mbr-fonts-style phone mbr-normal display-5">ዘመናዊ ቪላ ቤት ሽያጭ
+                            <p class="mbr-text mbr-fonts-style phone mbr-normal display-4">ዘመናዊ ቪላ ቤት ሽያጭ
 <br>ሠፈር :: ጉርድ ሾላ አካባቢ
 <br>ስፋት ::205 ካሜ
 <br>ዋጋ ::7.5ሚሊዮን ድርድር አለዉ
@@ -648,7 +648,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">280M2
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">280M2
 <div>6 bed room
 </div><div>G+2
 </div><div>Location Bole home's
@@ -698,7 +698,7 @@
                         <h4 class="card-title2 mbr-fonts-style mbr-normal display-7"></h4>
                         <div class="ico-box">
                             <span class="pr-2 mbr-iconfont mbr-iconfont-social ico2 mbri-pin"></span>
-                            <p class="mbr-text mbr-fonts-style phone mbr-normal display-5">ዘመናዊ ቪላ ቤቶች ለመግዛት ከወሰኑ በአያት እና ሰሚት አካባቢ የፈለጉትን ቤት መርጠው በካሽ ወይም በባንክ መግዛት ይችላሉ።
+                            <p class="mbr-text mbr-fonts-style phone mbr-normal display-4">ዘመናዊ ቪላ ቤቶች ለመግዛት ከወሰኑ በአያት እና ሰሚት አካባቢ የፈለጉትን ቤት መርጠው በካሽ ወይም በባንክ መግዛት ይችላሉ።
 ከ150 ሜ².-300ሜ². አሉን።&nbsp; code 29</p>
                         </div>
                     </div>
@@ -724,7 +724,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7"><div>ዘናጭ መኖሪያ ቤት አያት
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4"><div>ዘናጭ መኖሪያ ቤት አያት
 </div><div>ቪላ
 </div><div>255ካሬ ሜትር
 </div><div>ዋጋ 8 ሚሊየን ብር ድርድር አለ
@@ -757,7 +757,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">የሚሸጥ ቤት ፊጋ 200m2
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">የሚሸጥ ቤት ፊጋ 200m2
 <div>ቪላ&nbsp;
 </div><div>ዋጋ 6 ሚሊየን ብር
 </div><br><div>code 32</div><div><br><div><br></div></div></h4>
@@ -802,7 +802,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7"><br><div>የሚሸጥ መኖር ቤት ያለው ወይም አፍርሶ ለመስራት
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4"><br><div>የሚሸጥ መኖር ቤት ያለው ወይም አፍርሶ ለመስራት
 </div><div>ጃክሮስ
 </div><div>160ካሬ&nbsp;
 </div><div>ዋጋ 2.1 ሚሊዮን ብር
@@ -834,7 +834,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7"><div>የሚሸጥ 1200ካሬ ሜትር ዘመናዊ ቤት&nbsp;
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4"><div>የሚሸጥ 1200ካሬ ሜትር ዘመናዊ ቤት&nbsp;
 </div><div>የመዋኛ ገንዳ ያለው
 </div><div>አስፓልት ዳር ላይ
 </div><div>ዋጋ 68 ሚሊየን ድርድር አለው
@@ -870,7 +870,7 @@
                         <h4 class="card-title2 mbr-fonts-style mbr-normal display-7"><div></div></h4>
                         <div class="ico-box">
                             <span class="pr-2 mbr-iconfont mbr-iconfont-social ico2 mbri-pin"></span>
-                            <p class="mbr-text mbr-fonts-style phone mbr-normal display-5">አዳዲስ ምርጥ ምርጥ ቦታዎች በአያት እና ሲኤምሲ ያገኛሉ።
+                            <p class="mbr-text mbr-fonts-style phone mbr-normal display-4">አዳዲስ ምርጥ ምርጥ ቦታዎች በአያት እና ሲኤምሲ ያገኛሉ።
 <br>430 ካሬ 13 ሚሊየን ዋና መንገድ የያዘ ሳፋሪ
 <br>500ካሬ መሀል ሳፋሪ 8.5 ሚሊዮን 
 <br>500 :-8.5 ሚሊዮን መሀል ሳፋሪ
@@ -920,7 +920,7 @@
                         <h4 class="card-title2 mbr-fonts-style mbr-normal display-7"><div></div></h4>
                         <div class="ico-box">
                             <span class="pr-2 mbr-iconfont mbr-iconfont-social ico2 mbri-pin"></span>
-                            <p class="mbr-text mbr-fonts-style phone mbr-normal display-5">Land For Sale 
+                            <p class="mbr-text mbr-fonts-style phone mbr-normal display-4">Land For Sale 
 <br> በጣም ተፈላጊ የሆነ ቦታ በተመረጠ ሰፍር 
 <br>አያት&nbsp; , 500....... ካሬ 
 <br>ግንባሩ 32 ሜትር የሆነ ለሶስት መቆርጥ የሚችል
@@ -953,7 +953,7 @@
                         <h4 class="card-title2 mbr-fonts-style mbr-normal display-7"><div></div></h4>
                         <div class="ico-box">
                             <span class="pr-2 mbr-iconfont mbr-iconfont-social ico2 mbri-pin"></span>
-                            <p class="mbr-text mbr-fonts-style phone mbr-normal display-5">የሚሸጥ ቦታ አያት ዞን ሁለት አካባቢ
+                            <p class="mbr-text mbr-fonts-style phone mbr-normal display-4">የሚሸጥ ቦታ አያት ዞን ሁለት አካባቢ
 <br>350 ካሬ ሜትር
 <br>ዋጋ 4.5 ሚሊየን ብር&nbsp;<br>code 38</p>
                         </div>
@@ -981,7 +981,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">የሚሸጥ ያላቀ ህንፃ ቶፕ ቪው መገናኛ
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">የሚሸጥ ያላቀ ህንፃ ቶፕ ቪው መገናኛ
 <div>ባለ ብር እንዳያመልዎ ይፍጠኑ
 </div><div>G+7 building at Top View without finishing materials
 </div><div>Basment for parking
@@ -1033,7 +1033,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7"><div>የሚሸጥ ቪላ ቤት
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4"><div>የሚሸጥ ቪላ ቤት
 </div><div>Villa House for Sale 
 </div><div>Location: jakros
 </div><div>Area: 250m2
@@ -1069,7 +1069,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">የሚሸጥ G+2 ቤት&nbsp;
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">የሚሸጥ G+2 ቤት&nbsp;
 <div>ቦታ፡ ሰሚት፥ አትሌቶች መንደር፤ ለአስፋልት መንገድ በጣም ቅርብ
 </div><div>ስፋት፡ 175ሜ.ካሬ
 </div><div>2 ሳሎን ቤቶች (አንዱ ኦፕን ኪችን ያለው)፥ 4 መኝታ ቤቶች (ማስተሩን ጨምሮ ሁሉም የራሳቸው መታጠቢያ ቤት ያላቸው) እና ዋና ኪችን ያለው።
@@ -1102,7 +1102,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">የሚሸጥ ሰሚት ፍየል ቤት አካባቢ
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">የሚሸጥ ሰሚት ፍየል ቤት አካባቢ
 <div>ቪላ
 </div><div>250ካሬ ሜትር
 </div><div>ዋጋ 9 ሚሊዮን ብር
@@ -1148,7 +1148,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">Villa House for Sale
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">Villa House for Sale
 <div>Location: Summit, Weji Athletoch Mender
 </div><div>Area: 280m2, at L- position 
 </div><div>It has living room, master bedroom with attached bathroom, 2 other bedroom sharing a common bathroom. It has service quarter with 3 bedrooms, kitchen and toilet/shower.
@@ -1192,7 +1192,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">የሚሸጥ G+2 ቤት&nbsp;
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">የሚሸጥ G+2 ቤት&nbsp;
 <div>ቦታ፡ ሰሚት፥ አትሌቶች መንደር፤ ለአስፋልት መንገድ በጣም ቅርብ
 </div><div>ስፋት፡ 175ሜ.ካሬ
 </div><div>2 ሳሎን ቤቶች (አንዱ ኦፕን ኪችን ያለው)፥ 4 መኝታ ቤቶች (ማስተሩን ጨምሮ ሁሉም የራሳቸው መታጠቢያ ቤት ያላቸው) እና ዋና ኪችን ያለው።
@@ -1236,7 +1236,7 @@
                     </div>
 
                     <div class="text-box">
-                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-7">Size:- 175 sq.m
+                        <h4 class="card-title2 mbr-fonts-style mbr-normal display-4">Size:- 175 sq.m
 <div>G+7 finishing work remaining&nbsp;
 </div><div>Price:- 70,000,000,negotiable</div><div>Location: Michael-Mekanisa near Africa building
 </div><div><br><div><br></div></div></h4>
@@ -1415,7 +1415,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="q3ZhPvxaianO/nPmmvWhqcH85emdgu/wXLtj/SnhcaGdb23Ng8TlhzjX96lMFTgnCMnxBGoCzP9+4c6rUPBHtblgpSJcJ22wl8R5PM65c35lFxXuHncZhEsf9RuFNbh6">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="A4hcoViQ/RbgWygxWhL2oTBz7TB1iOQCByRD/rB9zqZw8ISRPJjQ6lwJQSzbuNavsSR3h4KNDnjROcuiviLyZHIotaZcxnLggIoLhdWolSBK8PiBTzQaUNxrFbpngyDE">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -1527,9 +1527,9 @@
             <div class="relative">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3941.1731526917733!2d38.689080450830936!3d8.95618729353987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b80deea07c56b%3A0x3fafd794e2f94039!2sJomo%20Condominium%20III!5e0!3m2!1sen!2set!4v1599301199617!5m2!1sen!2set" allowfullscreen=""></iframe></div>
                 <div class="block">
-                    <h2 class="title mbr-fonts-style mbr-bold display-5">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Our Office</h2>
+                    <h2 class="title mbr-fonts-style mbr-bold display-5">&nbsp;Our Office</h2>
                     <div class="line"></div>
-                    <p class="mbr-fonts-style mbr-text text display-7"></p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Jemo Condominium 3<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Addis Ababa &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;LGpropertymanagement@gmail.com                          <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Phone: +251 944 095 339&nbsp;</p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Give us a calll - we'll be happy to help</p>
+                    <p class="mbr-fonts-style mbr-text text display-7"></p><p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Jemo Condominium 3<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Addis Ababa&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;leakelibanos@gmail.com                          <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Phone: +251 944 095 339&nbsp;</p><p>&nbsp; &nbsp; &nbsp;Give us a call - we'll be happy to help</p>
                 </div>
             </div>
         </div>
@@ -1551,7 +1551,7 @@
 
                 <div class="navbar-brand">
                     <div class="logo">
-                        <a href="https://mobirise.com">
+                        <a href="index.html">
                             <img class="navbar-logo" src="assets/images/mbr-138x139.png" alt="Mobirise">
                         </a>
                     </div>
@@ -1599,7 +1599,7 @@
                     Contact Us
                 </h3>
 
-                <p class="mbr-text mbr-normal links mbr-fonts-style display-4">Mobile:- 251944095339<br>Email:- leakelibanos@gmail.com<br>Whatsup :- 251944095339<br>Telegram:- 0944095339</p>
+                <p class="mbr-text mbr-normal links mbr-fonts-style display-4">Mobile:- 251944095339<br>Email:- leakelibanos@gmail.com<br>WhatsApp :- 251944095339<br>Telegram:- 0944095339</p>
 
 
                 <div class="social-list align-left">
